--- a/Index.html
+++ b/Index.html
@@ -14,17 +14,16 @@
   </head>
   <body>
     <section>
-      <div><a href="">Read more</a> <a href="" class="Knap1">Read more</a></div>
-      <div><a href="">Read more</a> <a href="" class="Knap2">Read more</a></div>
+      <div><a href="" class="btn btn-simple">Read more</a></div>
+      <div><a href="" class="btn btn-square">Read more</a></div>
       <div>
-        <a href="">Read more</a> <a href="" class="Knap3 Knap2">Read more</a>
+        <a href="" class="btn btn-rounded">Read more</a>
       </div>
       <div>
-        <a href="">Read more</a>
-        <a href="" class="Knap4 Knap2 Knap3">Read more</a>
+        <a href="" class="btn btn-rounded-shadow">Read more</a>
       </div>
       <div>
-        <a href="">Read more</a> <a href="" class="Knap5 Knap2">Read more</a>
+        <a href="" class="btn btn-rounded-shadow-rotate">Read more</a>
       </div>
     </section>
   </body>
